--- a/test1.html
+++ b/test1.html
@@ -127,7 +127,7 @@
 						
 
 <!--▼▼▼　Information　▼▼▼-->
-<section id="information">
+<section id="information" hidden>
 	<div class="inner">
 	
 	<dl class="information_list clearfix">
