--- a/test1.html
+++ b/test1.html
@@ -127,8 +127,8 @@
 						
 
 <!--▼▼▼　Information　▼▼▼-->
-<section id="information" hidden>
-	<div class="inner">
+<section id="information">
+	<div class="inner" hidden>
 	
 	<dl class="information_list clearfix">
 		<dt>INFORMATION</dt>
