--- a/test1.html
+++ b/test1.html
@@ -97,7 +97,7 @@
 <!--▼▼▼　Movie　▼▼▼-->
 <section id="movie">
 	<div id="youtube">
-		<iframe width="1200" height="600" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=x2MnNs1VLGwol0Uf&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="1200" height="600" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=x2MnNs1VLGwol0Uf&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allow="autoplay" allowfullscreen></iframe>
 		
 	
 	</div>
