--- a/test1.html
+++ b/test1.html
@@ -63,11 +63,14 @@
 
 <!--▼▼▼　フルスクリーンメインビジュアル　▼▼▼-->
 <section id="main">
+	<div hidden>
+	
 	<div id="rev-1" class="mainvisual"></div>
 	<h1 class="wow fadeIn" data-wow-delay="2.8s"><img src="images/section01_img02.png" width="459"></h1>
 
 	<p class="main_left" id="rev-2"><img src="images/section01_img01.png" width="225"></p>
 	<p class="main_right" id="rev-3"><img src="images/section01_img01.png" width="225"></p>
+	</div>
 
 </section>
 <!--▲▲▲　フルスクリーンメインビジュアル　▲▲▲-->		
