--- a/test1.html
+++ b/test1.html
@@ -63,14 +63,14 @@
 
 <!--▼▼▼　フルスクリーンメインビジュアル　▼▼▼-->
 <section id="main">
-	<div hidden>
+
 	
 	<div id="rev-1" class="mainvisual"></div>
 	<h1 class="wow fadeIn" data-wow-delay="2.8s"><img src="images/section01_img02.png" width="459"></h1>
 
 	<p class="main_left" id="rev-2"><img src="images/section01_img01.png" width="225"></p>
 	<p class="main_right" id="rev-3"><img src="images/section01_img01.png" width="225"></p>
-	</div>
+
 
 </section>
 <!--▲▲▲　フルスクリーンメインビジュアル　▲▲▲-->		
@@ -100,7 +100,7 @@
 <!--▼▼▼　Movie　▼▼▼-->
 <section id="movie">
 	<div id="youtube">
-		<iframe width="1200" height="600" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=x2MnNs1VLGwol0Uf&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allow="autoplay" allowfullscreen></iframe>
+		<iframe width="1200" height="600" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=x2MnNs1VLGwol0Uf&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 	
 	</div>
