Update and rename test2 to test2.html

--- a/test2.html
+++ b/test2.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html lang="ja">
 <section id="movie">
 	<div id="youtube">
 		<iframe width="1200" height="600" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=x2MnNs1VLGwol0Uf&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allow="autoplay" allowfullscreen></iframe>
