--- a/test2.html
+++ b/test2.html
@@ -1,7 +1,63 @@
 <!doctype html>
 <html lang="ja">
+	<head>
+<meta charset="utf-8">
+
+<title>Indigrotto ｜ 藍月なくる New Album</title>
+<meta name="viewport" content="width=device-width,user-scalable=yes">
+
+<!-- サイト設定 ---->
+<meta name="keywords"            content="Indigrotto,藍月なくる,あいつきなくる" /> 
+<meta name="description"         content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」。" />
+<meta name="twitter:card"        content="summary_large_image" />
+<meta name="twitter:site"        content="@NakuruAitsuki" />
+<meta name="twitter:creator"     content="@NakuruAitsuki" />
+<meta name="twitter:title"       content="藍月なくる New Album 「Indigrotto」" />
+<meta name="twitter:description" content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」。" />
+<meta name="twitter:image:src"   content="https://nakuruaitsuki.com/images/card.jpg" />
+<meta property="og:title"        content="藍月なくる New Album 「Indigrotto」" />
+<meta property="og:url"          content="https://nakuruaitsuki.com//" />
+<meta property="og:image"        content="https://nakuruaitsuki.com/images/card.jpg" />
+<meta property="og:site_name"    content="Indigrotto" />
+<meta property="og:description"  content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」特設サイト" />
+
+<link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/images/appletouch.png">
+<link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+<!--[if lt IE 9]>
+<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+<![endif]-->
+
+<!-- cssの設定 -->
+<link rel="stylesheet" type="text/css" href="css/reset.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/sp_common.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/sp.css" media="all" />
+
+<!-- web font -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Noto+Sans+JP:wght@400&family=Noto+Sans+JP:wght@500&family=Noto+Sans+JP:wght@600&display=swap" rel="stylesheet">
+
+<!-- jQの設定 -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/demo.css" />
+<link rel="stylesheet" type="text/css" href="css/revealer.css" />
+<script>document.documentElement.className = 'js';</script>
+<script type="text/javascript" src="js/wow.js"></script>
+<script type="text/javascript">new WOW().init();</script>
+<link rel="stylesheet" type="text/css" href="css/animate.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
+
+</head>
+
+	<body>
 <section id="movie">
 	<div id="youtube">
 		<iframe width="1200" height="600" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=x2MnNs1VLGwol0Uf&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allow="autoplay" allowfullscreen></iframe>
 	</div>
 </section>
+
+		</body>
+</html>
