--- a/test2.html
+++ b/test2.html
@@ -53,6 +53,9 @@
 </head>
 
 	<body>
+<button onclick="location.href='https://developer.chrome.com/blog/autoplay/'" type="button">
+         www.example.com</button>
+		
 <section>
 	<div>
 		<iframe width="1200" height="600" src="https://www.youtube.com/embed/BbeeuzU5Qc8?si=pLQzDPaj9k6FVrX8&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
