--- a/test2.html
+++ b/test2.html
@@ -53,7 +53,7 @@
 </head>
 
 	<body>
-<button onclick="location.href='https://developer.chrome.com/blog/autoplay/'" type="button">
+<button onclick="location.href='https://chong130.github.io/test/test2/'" type="button">
          www.example.com</button>
 		
 <section>
