--- a/test2.html
+++ b/test2.html
@@ -51,9 +51,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 
 </head>
-
 	<body>
-<button onclick="location.href='https://chong130.github.io/test/test2/'" type="button">
+<button type="button">
+         www.examawdawddawple.com</button>
+		
+	<body>
+<button onclick="location.href='https://chong130.github.io/test/test2'" type="button">
          www.example.com</button>
 		
 <section>
