--- a/test2.html
+++ b/test2.html
@@ -52,20 +52,14 @@
 
 </head>
 	<body>
-<button type="button">
+<button onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" type="button">
          www.examawdawddawple.com</button>
 		
 	<body>
-<button onclick="location.href='https://chong130.github.io/test/test2'" type="button">
+<button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">
          www.example.com</button>
 		<section>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4PTG3Z6ehGkBFwjybzWkR8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>		
-		</section>
-<section>
-	<div>
-		<iframe width="1200" height="600" src="https://www.youtube.com/embed/BbeeuzU5Qc8?si=pLQzDPaj9k6FVrX8&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
-	</div>
-</section>
+
 
 		</body>
 </html>
