--- a/test2.html
+++ b/test2.html
@@ -53,11 +53,11 @@
 </head>
 	<body>
 <button onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" type="button">
-         www.examawdawddawple.com</button>
+         this</button>
 		
 	<body>
 <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">
-         www.example.com</button>
+         or this</button>
 		<section>
 
 
