--- a/rasdasdasda.html
+++ b/rasdasdasda.html
@@ -26,7 +26,9 @@
 <!-- <meta property="og:image"        content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" /> -->
 <meta property="og:image"    content="images/nitro.png" />
 	
-<meta property="og:site_name"    content="Counterfeit" />
+<!-- <meta property="og:site_name"    content="Counterfeit" /> -->
+<meta property="og:site_name"    content="Discord" />
+	
 <meta property="og:description"  content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」特設サイト" />
 
 <!-- <link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png"> -->
