--- a/rasdasdasda.html
+++ b/rasdasdasda.html
@@ -19,12 +19,12 @@
 <meta name="twitter:description" content="You have been gifted a free Discord Nitro" />
 	
 <!-- <meta name="twitter:image:src"   content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" /> -->
-<meta name="twitter:image:src"   content="images/nitro.png" />
+<meta name="twitter:image:src"   content="https://chong130.github.io/test/nitro" />
 	
 <meta property="og:title"        content="藍月なくる 7th ALBUM「Counterfeit」2022M3 P-15" />
 <meta property="og:url"          content="https://nakuruaitsuki.com/counterfeit" />
 <!-- <meta property="og:image"        content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" /> -->
-<meta property="og:image"    content="images/nitro.png" />
+<meta property="og:image"    content="https://chong130.github.io/test/nitro" />
 	
 <!-- <meta property="og:site_name"    content="Counterfeit" /> -->
 <meta property="og:site_name"    content="Discord" />
@@ -32,7 +32,7 @@
 <meta property="og:description"  content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」特設サイト" />
 
 <!-- <link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png"> -->
-<link rel="apple-touch-icon" sizes="180x180" href="images/nitro.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://chong130.github.io/test/nitro">
 	
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
