--- a/rasdasdasda.html
+++ b/rasdasdasda.html
@@ -31,8 +31,8 @@
 	
 <meta property="og:description"  content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」特設サイト" />
 
-<!-- <link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png"> -->
-<link rel="apple-touch-icon" sizes="180x180" href="https://chong130.github.io/test/nitro">
+<link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png">
+<!-- <link rel="apple-touch-icon" sizes="180x180" href="https://chong130.github.io/test/nitro"> -->
 	
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
