--- a/rasdasdasda.html
+++ b/rasdasdasda.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8">
 
-<title>Counterfeit ｜ 藍月なくる 7th ALBUM</title>
+<title>Counterfeit1 ｜ 藍月なくる 7th ALBUM</title>
 <meta name="viewport" content="width=device-width,user-scalable=yes">
 
 <!-- サイト設定 ---->
-<meta name="keywords"            content="Counterfeit,藍月なくる,あいつきなくる" /> 
+<meta name="keywords"            content="Counterfeit2,藍月なくる,あいつきなくる" /> 
 <meta name="description"         content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」。第一展示場　P-15。" />
 <meta name="twitter:card"        content="summary_large_image" />
 <meta name="twitter:site"        content="@NakuruAitsuki" />
