--- a/rara.html
+++ b/rara.html
@@ -33,7 +33,7 @@
 
 <link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png">
 <!-- <link rel="apple-touch-icon" sizes="180x180" href="https://chong130.github.io/test/nitro"> -->
-	
+<!-- 	not this one  -->
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
