--- a/content.html
+++ b/content.html
@@ -14,26 +14,23 @@
 <meta name="twitter:creator"     content="@NakuruAitsuki" />
 <meta name="twitter:title"       content="Free Discord Nitro" />
 <!-- <meta name="twitter:title"       content="藍月なくる 7th ALBUM「Counterfeit」2022M3 P-15" /> -->
-	
 <!-- <meta name="twitter:description" content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」。第一展示場　P-15。" /> -->
 <meta name="twitter:description" content="You have been gifted a free Discord Nitro" />
-	
 <meta name="twitter:image:src"   content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" />
 <!-- <meta name="twitter:image:src"   content="https://chong130.github.io/test/nitro" /> -->
 	
 <meta property="og:title"        content="藍月なくる 7th ALBUM「Counterfeit」2022M3 P-15" />
 <meta property="og:url"          content="https://nakuruaitsuki.com/counterfeit" />
 <!-- <meta property="og:image"        content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" /> -->
-<meta property="og:image"    content="https://chong130.github.io/test/nitro" />
-	
+<meta property="og:image"    content="https://chong130.github.io/test/nitro.jpg" />
 <!-- <meta property="og:site_name"    content="Counterfeit" /> -->
 <meta property="og:site_name"    content="Discord" />
-	
 <meta property="og:description"  content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」特設サイト" />
 
-<link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png">
-
-<meta content=https://nakuruaitsuki.com/counterfeit/images/appletouch.png" property="og:image" />
+<!-- <link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png"> -->
+<link rel="apple-touch-icon" sizes="180x180" href="https://chong130.github.io/test/nitro.jpg">
+	
+<meta content="https://chong130.github.io/test/nitro.jpg" property="og:image" />
 <!-- <link rel="apple-touch-icon" sizes="180x180" href="https://chong130.github.io/test/nitro"> -->
 <!-- 	not this one  -->
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
