--- a/content.html
+++ b/content.html
@@ -24,7 +24,8 @@
 <!-- <meta property="og:image"        content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" /> -->
 <meta property="og:image"    content="https://chong130.github.io/test/nitro.jpg" />
 <!-- <meta property="og:site_name"    content="Counterfeit" /> -->
-<meta property="og:site_name"    content="Discord" />
+<!-- 	AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
+<meta property="og:site_name"    content="Discord1" />
 <meta property="og:description"  content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」特設サイト" />
 
 <!-- <link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/counterfeit/images/appletouch.png"> -->
