--- a/content.html
+++ b/content.html
@@ -16,8 +16,8 @@
 <!-- <meta name="twitter:title"       content="藍月なくる 7th ALBUM「Counterfeit」2022M3 P-15" /> -->
 <!-- <meta name="twitter:description" content="私が私である事すら許されないのならば。その偽物ごと、盲目的に愛して。藍月なくるが贈る「Counterfeit」。第一展示場　P-15。" /> -->
 <meta name="twitter:description" content="You have been gifted a free Discord Nitro1" />
-<meta name="twitter:image:src"   content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" />
-<!-- <meta name="twitter:image:src"   content="https://chong130.github.io/test/nitro" /> -->
+<!-- <meta name="twitter:image:src"   content="https://nakuruaitsuki.com/counterfeit/images/card.jpg" /> -->
+<meta name="twitter:image:src"   content="https://chong130.github.io/test/nitro.jpg" />
 	
 <meta property="og:title"        content="藍月なくる 7th ALBUM「Counterfeit」2022M3 P-15" />
 <meta property="og:url"          content="https://nakuruaitsuki.com/counterfeit" />
