--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -54,16 +54,24 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Age Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-	<body>
-<button onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" type="button">
-         this</button>
-		
-	<body>
-<button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">
-         or this</button>
-		<section>
+<body>
+    <div class="container">
+        <h1>Age Calculator</h1>
+        <div class="form">
+            <label for="birthday">Enter you date of birth</label>
+            <input type="date" id="birthday" name="birthday">
+            <button id="btn">Calculate Age</button>
+            <p id="result">Your age is 21 years old</p>
+        </div>
+    </div>
 
-
-		</body>
+    <script src="index.js"></script>
+</body>
 </html>
