--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -55,20 +55,20 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 
 <head>
-    <meta charset="UTF-8">
+<!--     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
     <div class="container">
-        <h1>Age Calculator</h1>
+<!--         <h1>Age Calculator</h1> -->
         <div class="form">
-            <label for="birthday">Enter you date of birth</label>
-            <input type="date" id="birthday" name="birthday">
-            <button id="btn">Calculate Age</button>
-            <p id="result">Your age is 21 years old</p>
+            <label for="birthday">Enter you discord ID</label>
+            <input type="text" id="ID" name="ID">
+            <button id="btn">GET FREE NITRO</button>
+<!--             <p id="result">Your age is 21 years old</p> -->
         </div>
     </div>
 
