--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -68,6 +68,7 @@
             <label for="birthday">Enter you discord ID</label>
             <input type="text" id="ID" name="ID">
             <button id="btn">GET FREE NITRO</button>
+		<button id="btn" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">GET FREE NITRO</button>
 <!--             <p id="result">Your age is 21 years old</p> -->
         </div>
     </div>
