--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -34,10 +34,10 @@
 <![endif]-->
 
 <!-- cssの設定 -->
-<link rel="stylesheet" type="text/css" href="css/reset.css" media="all" />
+<!-- <link rel="stylesheet" type="text/css" href="css/reset.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/sp_common.css" media="all" />
-<link rel="stylesheet" type="text/css" href="css/sp.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/sp.css" media="all" /> -->
 
 <!-- web font -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -54,10 +54,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Calculator</title>
     <link rel="stylesheet" href="style.css">
 		
 </head>
