--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -59,13 +59,16 @@
 		
 </head>
 <body>
-    <div class="container">
+<!--     <div class="container"> -->
+    <div>
+	    
 <!--         <h1>Age Calculator</h1> -->
-        <div class="form">
+<!--         <div class="form"> -->
+        <div>
+		
             <label for="birthday">Enter you discord ID</label>
             <input type="text" id="ID" name="ID">
-            <button id="btn">GET FREE NITRO</button>
-		<button id="btn" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">GET FREE NITRO</button>
+	<button id="btn" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">GET FREE NITRO</button>
 <!--             <p id="result">Your age is 21 years old</p> -->
         </div>
     </div>
