--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -54,7 +54,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!--     <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <link rel="stylesheet" href="style.css">
 		<title>Login</title>
         <link rel="stylesheet" href="styles/login_page.css">
