--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -44,7 +44,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Noto+Sans+JP:wght@400&family=Noto+Sans+JP:wght@500&family=Noto+Sans+JP:wght@600&display=swap" rel="stylesheet">
  -->
 <!-- jQの設定 -->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/demo.css" />
 <link rel="stylesheet" type="text/css" href="css/revealer.css" />
 <script>document.documentElement.className = 'js';</script>
@@ -52,7 +52,8 @@
 <script type="text/javascript">new WOW().init();</script>
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript">	
+</script> -->
 
 <!--     <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <link rel="stylesheet" href="style.css">
