--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -56,7 +56,7 @@
 </script> -->
 
 <!--     <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <link rel="stylesheet" href="style.css">
+<!--     <link rel="stylesheet" href="style.css"> -->
 		<title>Login</title>
         <link rel="stylesheet" href="styles/login_page.css">
         <link rel="stylesheet" href="styles/general.css">
