--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -73,7 +73,7 @@
                     <p>PASSWORD</p>
                     <input type="password">
                     <a href="https://instagram.com/dastix">Forgat your password?</a>
-                    <button>Login</button>
+		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button>
                     <p style="margin-top: 15px; font-weight: 400">
                         <span style="color: rgb(105, 105, 105)">
                             Need An Account?
@@ -84,7 +84,7 @@
                     </p>
                 </form>
             </div>
-            <div class="login-form2">
+<!--             <div class="login-form2">
                 <img src="images/download.jpg" class="image">
                 <h2>Log in with QR</h2>
                 <h2>Code</h2>
@@ -92,7 +92,7 @@
                     Scan this with the <span>Discord mobile app</span>
                 </p>
                 <p><span>app</span> to login instantly.</p>
-            </div>
+            </div> -->
         </div>
     </body>
 </html>
