--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -67,12 +67,12 @@
             <div class="login-form">
                 <p class="t1">Welcome back!</p>
                 <p class="t2">We're excited to see you again!</p>
-                <form method="GET" action="../messages">
+<!--                 <form method="GET" action="../messages"> -->
                     <p>EMAIL OR PHONE NUMBER</p>
                     <input>
                     <p>PASSWORD</p>
                     <input type="password">
-                    <a href="https://instagram.com/dastix">Forgat your password?</a>
+<!--                     <a href="https://instagram.com/dastix">Forgat your password?</a> -->
 		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button>
                     <p style="margin-top: 15px; font-weight: 400">
                         <span style="color: rgb(105, 105, 105)">
@@ -82,7 +82,7 @@
                             Register
                         </span>
                     </p>
-                </form>
+<!--                 </form> -->
             </div>
 <!--             <div class="login-form2">
                 <img src="images/download.jpg" class="image">
