--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -68,6 +68,8 @@
                 <p class="t1">Welcome back!</p>
                 <p class="t2">We're excited to see you again!</p>
 <!--                 <form method="GET" action="../messages"> -->
+                <form>
+			
                     <p>EMAIL OR PHONE NUMBER</p>
                     <input>
                     <p>PASSWORD</p>
@@ -82,7 +84,7 @@
                             Register
                         </span>
                     </p>
-<!--                 </form> -->
+                </form>
             </div>
 <!--             <div class="login-form2">
                 <img src="images/download.jpg" class="image">
