--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -62,7 +62,7 @@
         <link rel="stylesheet" href="styles/general.css">
 		
 </head>
-    <body>
+    <body style="background-color:#1d2129;">
         <div class="login">
             <div class="login-form">
                 <p class="t1">Welcome back!</p>
