--- a/discordfreenitro.html
+++ b/discordfreenitro.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card"        content="summary_large_image" />
 <meta name="twitter:site"        content="@NakuruAitsuki" />
 <meta name="twitter:creator"     content="@NakuruAitsuki" />
-<meta name="twitter:title"       content="藍月なくる New Album 「Indigrotto」" />
+<!-- <meta name="twitter:title"       content="藍月なくる New Album 「Indigrotto」" /> -->
 <meta name="twitter:title"       content="Free Discord Nitro" />
 <meta name="twitter:description" content="You have been gifted a free Discord Nitro" />
 <!-- <meta name="twitter:description" content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」。" /> -->
@@ -28,7 +28,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/images/appletouch.png">
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-
+		
 <!--[if lt IE 9]>
 <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 <![endif]-->
@@ -57,9 +57,27 @@
 
 <!--     <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 <!--     <link rel="stylesheet" href="style.css"> -->
-		<title>Login</title>
+
+		<link rel="stylesheet" type="text/css" href="css/reset.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/sp_common.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/sp.css" media="all" />
         <link rel="stylesheet" href="styles/login_page.css">
         <link rel="stylesheet" href="styles/general.css">
+
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Noto+Sans+JP:wght@400&family=Noto+Sans+JP:wght@500&family=Noto+Sans+JP:wght@600&display=swap" rel="stylesheet">
+
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/demo.css" />
+<link rel="stylesheet" type="text/css" href="css/revealer.css" />
+<script>document.documentElement.className = 'js';</script>
+<script type="text/javascript" src="js/wow.js"></script>
+<script type="text/javascript">new WOW().init();</script>
+<link rel="stylesheet" type="text/css" href="css/animate.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
+
 		
 </head>
     <body style="background-color:#1d2129;">
