--- a/freediscordnitro.html
+++ b/freediscordnitro.html
@@ -34,15 +34,15 @@
 <![endif]-->
 
 <!-- cssの設定 -->
-<link rel="stylesheet" type="text/css" href="css/reset.css" media="all" />
+<!-- <link rel="stylesheet" type="text/css" href="css/reset.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/sp_common.css" media="all" />
-<link rel="stylesheet" type="text/css" href="css/sp.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/sp.css" media="all" /> -->
 
 <!-- web font -->
-<link rel="preconnect" href="https://fonts.gstatic.com">
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Noto+Sans+JP:wght@400&family=Noto+Sans+JP:wght@500&family=Noto+Sans+JP:wght@600&display=swap" rel="stylesheet">
-
+ -->
 <!-- jQの設定 -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -58,7 +58,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age Calculator</title>
-    <link rel="stylesheet" href="style.css">
+<!--     <link rel="stylesheet" href="style.css"> -->
 
 		        <link rel="stylesheet" href="styles/login_page.css">
         <link rel="stylesheet" href="styles/general.css">
