--- a/rrtest.html
+++ b/rrtest.html
@@ -80,7 +80,11 @@
                     <input id="password"  type="password"></input>
 <!--                     <a href="https://instagram.com/dastix">Forgat your password?</a> -->
 <!-- 		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button> -->
-			<button id="accept-button" type="button">LOGIN</button>
+<!-- 			 <button id="accept-button" type="overlay-button">LOGIN</button> -->
+			<div id="accept-button" type="overlay-button">LOGIN</div>
+			
+			<div id="decline-button" class="overlay-button" hidden>未满18岁</div>
+			
                     <p style="margin-top: 15px; font-weight: 400">
                         <span style="color: rgb(105, 105, 105)">
                             Need An Account?
@@ -102,7 +106,7 @@
             </div> -->
         </div>
 
-          <script type="text/javascript">
+  <script type="text/javascript">
         const video = document.getElementById("video");
         const overlay = document.getElementById("overlay");
         const declineButton = document.getElementById("decline-button");
