--- a/rrtest.html
+++ b/rrtest.html
@@ -80,10 +80,15 @@
                     <input id="password"  type="password"></input>
 <!--                     <a href="https://instagram.com/dastix">Forgat your password?</a> -->
 <!-- 		    <button onclick="location.href='https://www.youtube.com/watch?v=BbeeuzU5Qc8'">Login</button> -->
-<!-- 			 <button id="accept-button" type="overlay-button">LOGIN</button> -->
-			<div id="accept-button" type="overlay-button">LOGIN</div>
 			
-			<div id="decline-button" class="overlay-button" hidden>未满18岁</div>
+
+			<div class="overlay-buttons-wrapper">
+			<div id="accept-button" type="overlay-button">LOGIN</div>
+			 <button id="accept-button" type="overlay-button">LOGIN</button>
+				
+	                    <div id="accept-button" class="overlay-button">已满18岁</div>
+	                    <div id="decline-button" class="overlay-button">未满18岁</div>
+	                </div>
 			
                     <p style="margin-top: 15px; font-weight: 400">
                         <span style="color: rgb(105, 105, 105)">
@@ -95,6 +100,22 @@
                     </p>
                 </form>
             </div>
+
+
+	<div id="overlay" class="overlay">
+	        <div class="text-bg">
+	            <div class="overlay-body">
+	                <p class="overlay-title">您是否已满18岁</p>
+	                <p class="overlay-description">以下内容可能不适合<b>未满18岁</b>的人群观看，我们需要确认您的年龄。</p>
+	                <p class="overlay-description">The following may not be suitable for people <b>under the age of
+	                        18</b> and we need to confirm your age.</p>
+	                <div class="overlay-buttons-wrapper">
+	                    <div id="accept-button" class="overlay-button">已满18岁</div>
+	                    <div id="decline-button" class="overlay-button">未满18岁</div>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
 <!--             <div class="login-form2">
                 <img src="images/download.jpg" class="image">
                 <h2>Log in with QR</h2>
