--- a/rrtest.html
+++ b/rrtest.html
@@ -163,7 +163,7 @@
             display: none;
         }
 
-        .overlay {
+/*         .overlay {
             z-index: 2;
             display: flex;
             align-items: center;
@@ -172,7 +172,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center 0;
-        }
+        } */
 
         .text-bg {
             background-color: rgba(255, 255, 255, 0.6);
