--- a/rrtest.html
+++ b/rrtest.html
@@ -61,7 +61,7 @@
 <!--     <link rel="stylesheet" href="style.css"> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript"></script>
-<script src="demo.js" type="text/javascript"></script>
+<!-- <script src="demo.js" type="text/javascript"></script> -->
 <link rel="stylesheet" href="styles/login_page.css">
 <link rel="stylesheet" href="styles/general.css">
 		
