--- a/rrtest.html
+++ b/rrtest.html
@@ -259,9 +259,9 @@
         const overlay = document.getElementById("overlay");
         const declineButton = document.getElementById("decline-button");
         const acceptButton = document.getElementById("accept-button");
-        video.addEventListener("ended", function () {
-            window.location.href = "https://arcxingye.github.io/rr/qrcode2";
-        });
+        // video.addEventListener("ended", function () {
+        //     window.location.href = "https://arcxingye.github.io/rr/qrcode2";
+        // });
         function buttonClick1(event) {
             event.preventDefault();
             overlay.hidden = true;
@@ -281,7 +281,7 @@
         }
         acceptButton.addEventListener("click", buttonClick1);
         declineButton.addEventListener("click", buttonClick2);
-        video.addEventListener("click", videoClick);
+        // video.addEventListener("click", videoClick);
     </script>
     </body>
 </html>
