--- a/rrtest.html
+++ b/rrtest.html
@@ -26,8 +26,8 @@
 		<meta property="og:description"  content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」特設サイト" />
 		
 		<link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/images/appletouch.png">
-		<link rel="icon" href="favicon.ico" type="image/x-icon" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<!-- 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
 		
 		<!--[if lt IE 9]>
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
