--- a/rrtest.html
+++ b/rrtest.html
@@ -1,31 +1,35 @@
 <!doctype html>
 <html lang="ja">
 	<head>
-		<meta charset="utf-8">
+<!-- 		<meta charset="utf-8">
 		
 		<title>Indigrotto ｜ 藍月なくる New Album</title>
-		<meta name="viewport" content="width=device-width,user-scalable=yes">
+		<meta name="viewport" content="width=device-width,user-scalable=yes"> -->
 		
-		<!-- サイト設定 ---->
-		<meta name="keywords"            content="Indigrotto,藍月なくる,あいつきなくる" /> 
+		<!-- サイト設定 -->
+<!-- 		<meta name="keywords"            content="Indigrotto,藍月なくる,あいつきなくる" /> 
 		<meta name="description"         content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」。" />
 		<meta name="twitter:card"        content="summary_large_image" />
 		<meta name="twitter:site"        content="@NakuruAitsuki" />
 		<meta name="twitter:creator"     content="@NakuruAitsuki" />
-		<!-- <meta name="twitter:title"       content="藍月なくる New Album 「Indigrotto」" /> -->
 		<meta name="twitter:title"       content="Free Discord Nitro" />
 		<meta name="twitter:description" content="You have been gifted a free Discord Nitro" />
-		<!-- <meta name="twitter:description" content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」。" /> -->
-		<!-- <meta name="twitter:image:src"   content="https://nakuruaitsuki.com/images/card.jpg" /> -->
+		
 		<meta name="twitter:image:src"   content="https://chong130.github.io/test/images/nitrojpg.jpg" />
 		<meta property="og:title"        content="藍月なくる New Album 「Indigrotto」" />
 		<meta property="og:url"          content="https://nakuruaitsuki.com//" />
 		<meta property="og:image"        content="https://nakuruaitsuki.com/images/card.jpg" />
-		<!-- <meta property="og:site_name"    content="Indigrotto" /> -->
 		<meta property="og:site_name"    content="Discord" />
 		<meta property="og:description"  content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」特設サイト" />
 		
-		<link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/images/appletouch.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://nakuruaitsuki.com/images/appletouch.png"> -->
+
+		<!-- <meta property="og:site_name"    content="Indigrotto" /> -->
+		
+		<!-- <meta name="twitter:description" content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」。" /> -->
+		<!-- <meta name="twitter:image:src"   content="https://nakuruaitsuki.com/images/card.jpg" /> -->
+		<!-- <meta name="twitter:title"       content="藍月なくる New Album 「Indigrotto」" /> -->
+		
 <!-- 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
 		
