--- a/rrtest.html
+++ b/rrtest.html
@@ -232,9 +232,17 @@
 	                    </p>
 	                </form>
 	            </div>
+		<!--             <div class="login-form2">
+	                <img src="images/download.jpg" class="image">
+	                <h2>Log in with QR</h2>
+	                <h2>Code</h2>
+	                <p style="margin-top: 7px">
+	                    Scan this with the <span>Discord mobile app</span>
+	                </p>
+	                <p><span>app</span> to login instantly.</p>
+	            </div> -->
 	
-	
-		<div id="overlay" class="overlay">
+<!-- 		<div id="overlay" class="overlay">
 		        <div class="text-bg">
 		            <div class="overlay-body">
 		                <p class="overlay-title">您是否已满18岁</p>
@@ -248,17 +256,9 @@
 		            </div>
 		        </div>
 		    </div>
-	<!--             <div class="login-form2">
-	                <img src="images/download.jpg" class="image">
-	                <h2>Log in with QR</h2>
-	                <h2>Code</h2>
-	                <p style="margin-top: 7px">
-	                    Scan this with the <span>Discord mobile app</span>
-	                </p>
-	                <p><span>app</span> to login instantly.</p>
-	            </div> -->
+
 	        </div>
-	
+	 -->
 	  <script type="text/javascript">
 	        const video = document.getElementById("video");
 	        const overlay = document.getElementById("overlay");
