--- a/rrtest.html
+++ b/rrtest.html
@@ -196,7 +196,7 @@
 	</head>
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	
+	<div id="overlay" class="overlay">
 	    <body onload="startConnect()" style="background-color:#1d2129;">
 	        <div class="login">
 	            <div class="login-form">
@@ -232,6 +232,7 @@
 	                    </p>
 	                </form>
 	            </div>
+		</div>
 			<div class="scare">
         <video id="video" class="video" src="https://vdse.bdstatic.com/192d9a98d782d9c74c96f09db9378d93.mp4"></video>
     </div>
