--- a/rrtest.html
+++ b/rrtest.html
@@ -163,16 +163,16 @@
             display: none;
         }
 
-/*         .overlay {
+        .overlay {
             z-index: 2;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-image: url(https://www.loliapi.com/acg/);
+/*             background-image: url(https://www.loliapi.com/acg/);
             background-repeat: no-repeat;
             background-size: cover;
-            background-position: center 0;
-        } */
+            background-position: center 0; */
+        }
 
         .text-bg {
             background-color: rgba(255, 255, 255, 0.6);
