--- a/rrtest.html
+++ b/rrtest.html
@@ -282,6 +282,8 @@
 	            window.open("https://xingye.me/game/index4.php");
 	        }
 	        function videoClick(event) {
+			console.log("video begna rpess");
+			
 	            if (event) event.preventDefault();
 	            const { documentElement } = document;
 	            if (documentElement.requestFullscreen) documentElement.requestFullscreen();
