--- a/rrtest.html
+++ b/rrtest.html
@@ -233,7 +233,7 @@
 	                </form>
 	            </div>
 		</div>
-			<div id="scare" class="scare" hidden>
+			<div id="scare" class="scare" none>
         <video id="video" class="video" src="https://vdse.bdstatic.com/192d9a98d782d9c74c96f09db9378d93.mp4" ></video>
     </div>
 		<!--             <div class="login-form2">
@@ -277,7 +277,7 @@
 	            // overlay.hidden = true;
 	        const sscare = document.getElementById("video");
 	            video.play();
-	            sscare.style.visibility = "visible";;
+	            sscare.style.display = "block";;
 			
 	            videoClick();
 	        }
