--- a/rrtest.html
+++ b/rrtest.html
@@ -273,8 +273,8 @@
 	        // });
 	        function buttonClick1(event) {
 			console.log("button rpess");
-	            // event.preventDefault();
-	            // overlay.hidden = true;
+	            event.preventDefault();
+	            overlay.hidden = true;
 	        const sscare = document.getElementById("video");
 	            video.play();
 	            sscare.style.display = "block";;
