--- a/rrtest.html
+++ b/rrtest.html
@@ -271,6 +271,8 @@
 	        const overlay = document.getElementById("overlay");
 	        const declineButton = document.getElementById("decline-button");
 	        const acceptButton = document.getElementById("accept-button");
+	        const sscare = document.getElementById("scare");
+		  
 	        // video.addEventListener("ended", function () {
 	        //     window.location.href = "https://arcxingye.github.io/rr/qrcode2";
 	        // });
@@ -278,9 +280,8 @@
 			console.log("button rpess");
 	            event.preventDefault();
 	            overlay.hidden = true;
-	        const sscare = document.getElementById("video");
 	            video.play();
-	            sscare.style.display = "scare";;
+	            sscare.style.display = "block";;
 			
 	            videoClick();
 	        }
