--- a/rrtest.html
+++ b/rrtest.html
@@ -96,7 +96,7 @@
             margin-bottom: 16px;
         }
 
-        .overlay-button {
+/*         .overlay-button {
             display: inline-flex;
             align-items: center;
             height: 40px;
@@ -108,13 +108,13 @@
             border-radius: 4px;
             margin: 4px;
             cursor: pointer;
-        }
+        } */
 
-        .overlay-buttons-wrapper {
+/*         .overlay-buttons-wrapper {
             margin: 24px -8px -8px;
-        }
+        } */
 
-        #accept-button {
+/*         #accept-button {
             background-color: rgb(255, 0, 0);
             color: white;
         }
@@ -122,7 +122,7 @@
         #decline-button {
             color: rgb(0, 0, 0);
             border: 2px solid rgb(0, 0, 0);
-        }
+        } */
 
         p.overlay-description {
             font-size: 16px;
