--- a/rrtest.html
+++ b/rrtest.html
@@ -219,7 +219,7 @@
 <!-- 				<div class="overlay-buttons-wrapper"> -->
 					
 <!-- 				 <button id="accept-button" type="overlay-button" onclick="buttonClick1()" >LOGIN </button> -->
-				 <button id="accept-button" type="overlay-button"  >LOGIN </button>
+<!-- 				 <button id="accept-button" type="overlay-button"  >LOGIN </button> -->
 				 <button id="accept-button"  >LOGIN </button>
 				
 <!--  				<div  type="overlay-button">LOGIN</div> -->
