--- a/freediscordnitro.html
+++ b/freediscordnitro.html
@@ -17,6 +17,8 @@
 <meta name="twitter:description" content="You have been gifted a free Discord Nitro" />
 <!-- <meta name="twitter:description" content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」。" /> -->
 <!-- <meta name="twitter:image:src"   content="https://nakuruaitsuki.com/images/card.jpg" /> -->
+<!-- <meta name="twitter:image:src"   content="https://nakuruaitsuki.com/images/card.jpg" /> -->
+		
 <meta name="twitter:image:src"   content="https://chong130.github.io/test/images/nitrojpg.jpg" />
 <meta property="og:title"        content="藍月なくる New Album 「Indigrotto」" />
 <meta property="og:url"          content="https://nakuruaitsuki.com//" />
