--- a/meet5.html
+++ b/meet5.html
@@ -35,8 +35,7 @@
         <meta property="og:image" content="./favicon/og_image.png"/>
         <script data-ad-client="ca-pub-3847912259857123" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-        <link  rel="stylesheet" href="css/animate.css">
-        
+        <link rel="stylesheet" href="styles/general.css">
 <!--         <link  rel="stylesheet" href="css/2.97503911.chunk.css">
         <link  rel="stylesheet" href="css/main.525ce8fe.chunk.css"> -->
 <!--          <link  rel="stylesheet" href="./css/2.97503911.chunk.css">
